fix: admin header image stretch issue fix

--- a/components/common/AdminHeader/adminHeader.module.scss
+++ b/components/common/AdminHeader/adminHeader.module.scss
@@ -77,6 +77,7 @@
 .icons img {
   width: 40px;
   /* height: 40px; */
+  display: block;
   cursor: pointer;
 }
 
